--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Kombined Universal Storage Service",
   "main": "index.js",
   "scripts": {
-    "test": "make test"
+    "test": "make test",
+    "lint": "eslint ./ --fix",
+    "pretest": "npm run lint"
   },
   "repository": {
     "type": "git",
@@ -23,16 +25,6 @@
     "url": "https://github.com/influentialpublishers/kuss/issues"
   },
   "homepage": "https://github.com/influentialpublishers/kuss#readme",
-  "eslintConfig": {
-    "extends": "influential",
-    "parserOptions": {
-      "ecmaVersion": 6,
-      "sourceType": "module"
-    },
-    "env": {
-      "node": true
-    }
-  },
   "dependencies": {
     "amqplib": "^0.5.1",
     "bluebird": "^3.4.6",
@@ -48,9 +40,15 @@
     "uuid": "^3.0.0"
   },
   "devDependencies": {
+    "babel-eslint": "^7.2.3",
     "chai": "^3.5.0",
-    "eslint": "^3.5.0",
+    "eslint": "^3.19.0",
     "eslint-config-influential": "^1.1.0",
+    "eslint-config-standard": "^10.2.1",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-node": "^5.1.1",
+    "eslint-plugin-promise": "^3.5.0",
+    "eslint-plugin-standard": "^3.0.1",
     "istanbul": "^0.4.5",
     "mocha": "^3.0.2",
     "must": "^0.13.2",
