--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
     "bluebird": "^3.4.6",
     "elasticsearch": "^11.0.1",
     "generic-pool": "^3.1.2",
-    "got-couch": "^1.2.0",
     "mysql2": "^1.1.0",
+    "nano": "^6.4.0",
     "on-finished": "^2.3.0",
     "pimp-my-sql": "0.3.1",
     "ramda": "^0.22.1",
